@@ -6,8 +6,8 @@ Build Instructions
 
   - A Linux-based system with a standard C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.13.2.0 or later: https://skarnet.org/software/skalibs/
-  - optional: nsss version 0.2.0.3 or later: https://skarnet.org/software/nsss/
+  - skalibs version 2.14.0.0 or later: https://skarnet.org/software/skalibs/
+  - optional: nsss version 0.2.0.4 or later: https://skarnet.org/software/nsss/
   - optional: execline version 2.9.4.0 or later: https://skarnet.org/software/execline/
 
  This software is Linux-specific. It will run on a Linux kernel,
