@@ -22,7 +22,9 @@
 
 <ul>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
-dependency bumped to 2.13.2.0. </li>
+dependency bumped to 2.14.0.0. </li>
+ <li> <a href="//skarnet.org/software/nsss/">nsss</a>
+optional dependency bumped to 0.2.0.4. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a>
 optional dependency bumped to 2.9.4.0. </li>
 </ul>
